adding more search fields

--- a/app/views/layouts/_search_tools.html.erb
+++ b/app/views/layouts/_search_tools.html.erb
@@ -1,30 +1,97 @@
 <div class="search-tools">
   <div class="search-tools-wrapper">
     <div class="filter">
-      <label>Colors</label>
+      <label>Word Count</label>
 
       <div>
         <ol>
           <li>
-            <input id="red" type="checkbox">
-            <label for="red">Red</label>
+            <input id="wc-1" type="checkbox">
+            <label for="wc-1">Under 5k</label>
           </li>
           <li>
-            <input id="green" type="checkbox">
-            <label for="green">Green</label>
+            <input id="wc-2" type="checkbox">
+            <label for="wc-2">5k to 10k</label>
           </li>
           <li>
-            <input id="blue" type="checkbox">
-            <label for="blue">Blue</label>
+            <input id="wc-3" type="checkbox">
+            <label for="wc-3">10k to 20k</label>
           </li>
+          <li>
+            <input id="wc-4" type="checkbox">
+            <label for="wc-4">20k to 50k</label>
+          </li>
+          <li>
+            <input id="wc-5" type="checkbox">
+            <label for="wc-5">50k to 100k</label>
+          </li>
+          <li>
+            <input id="wc-6" type="checkbox">
+            <label for="wc-6">100k to 200k</label>
+          </li>
+          <li>
+            <input id="wc-7" type="checkbox">
+            <label for="wc-7">200k and up</label>
+          </li>
+
+
         </ol>
       </div>
     </div>
     <div class="filter">
-      <label>Sizes</label>
+      <label>Main Characters</label>
 
       <div>
         <ol>
+          <li>
+            <input id="small" type="checkbox">
+            <label for="small">Harry Potter</label>
+          </li>
+          <li>
+            <input id="medium" type="checkbox">
+            <label for="medium">Luna Lovegood</label>
+          </li>
+          <li>
+            <input id="large" type="checkbox">
+            <label for="large">Severus Snape</label>
+          </li>
+          <li>
+            <input id="small" type="checkbox">
+            <label for="small">Draco Malfoy</label>
+          </li>
+          <li>
+            <input id="medium" type="checkbox">
+            <label for="medium">Molly Weasley</label>
+          </li>
+          <li>
+            <input id="large" type="checkbox">
+            <label for="large">Large</label>
+          </li>
+
+          <li>
+            <input id="small" type="checkbox">
+            <label for="small">Small</label>
+          </li>
+          <li>
+            <input id="medium" type="checkbox">
+            <label for="medium">Medium</label>
+          </li>
+          <li>
+            <input id="large" type="checkbox">
+            <label for="large">Large</label>
+          </li>
+          <li>
+            <input id="small" type="checkbox">
+            <label for="small">Small</label>
+          </li>
+          <li>
+            <input id="medium" type="checkbox">
+            <label for="medium">Medium</label>
+          </li>
+          <li>
+            <input id="large" type="checkbox">
+            <label for="large">Large</label>
+          </li>
           <li>
             <input id="small" type="checkbox">
             <label for="small">Small</label>
@@ -41,21 +108,66 @@
       </div>
     </div>
     <div class="filter">
-      <label>Lengths</label>
+      <label>Maturity Rating</label>
 
       <div>
         <ol>
           <li>
             <input id="short" type="checkbox">
-            <label for="short">Short</label>
+            <label for="short">General Audience</label>
           </li>
           <li>
             <input id="long" type="checkbox">
-            <label for="long">Long</label>
+            <label for="long">Parental Guidance</label>
+          </li>
+          <li>
+            <input id="short" type="checkbox">
+            <label for="short">PG-13</label>
+          </li>
+          <li>
+            <input id="long" type="checkbox">
+            <label for="long">Restricted</label>
+          </li>
+          <li>
+            <input id="long" type="checkbox">
+            <label for="long">NC-17</label>
           </li>
         </ol>
       </div>
     </div>
+
+    <div class="filter">
+      <label>Cross Overs</label>
+      <div>
+        <ol>
+          <li>
+            <input id="short" type="checkbox">
+            <label for="short">None</label>
+          </li>
+          <li>
+            <input id="short" type="checkbox">
+            <label for="short">Mass Effect</label>
+          </li>
+          <li>
+            <input id="long" type="checkbox">
+            <label for="long">Wizard of Oz</label>
+          </li>
+          <li>
+            <input id="short" type="checkbox">
+            <label for="short">Bionicles</label>
+          </li>
+          <li>
+            <input id="long" type="checkbox">
+            <label for="long">Worm</label>
+          </li>
+          <li>
+            <input id="long" type="checkbox">
+            <label for="long">Foobar</label>
+          </li>
+        </ol>
+      </div>
+    </div>
+
     <div class="trigger">
       <button>Update</button>
     </div>
