--- a/app/views/layouts/_search_tools.html.erb
+++ b/app/views/layouts/_search_tools.html.erb
@@ -168,6 +168,43 @@
       </div>
     </div>
 
+    <div class="filter">
+      <label>Relationships</label>
+      <div>
+        <ol>
+          <li>
+            <input id="short" type="checkbox">
+            <label for="short">Hetero</label>
+          </li>
+          <li>
+            <input id="short" type="checkbox">
+            <label for="short">Slash</label>
+          </li>
+          <li>
+            <input id="long" type="checkbox">
+            <label for="long">Femslash</label>
+          </li>
+          </li>
+        </ol>
+      </div>
+    </div>
+
+    <div class="filter">
+      <label>Cross Overs</label>
+      <div>
+        <ol>
+          <li>
+            <input id="short" type="checkbox">
+            <label for="short">None</label>
+          </li>
+          <li>
+            <input id="short" type="checkbox">
+            <label for="short">Mass Effect</label>
+          </li>
+        </ol>
+      </div>
+    </div>
+
     <div class="trigger">
       <button>Update</button>
     </div>
