--- a/app/views/fanfics/_fanfic_card.html.erb
+++ b/app/views/fanfics/_fanfic_card.html.erb
@@ -18,7 +18,7 @@
     <ul>
       <li>97%<span>Rating</span></li>
       <li>298k<span>Words</span></li>
-      <li>05/12/13<span>Released</span></li>
+      <li>05/12/13<span>Release Date</span></li>
     </ul>
   </div>
 </div>
