--- a/app/assets/stylesheets/partials/_review.scss
+++ b/app/assets/stylesheets/partials/_review.scss
@@ -9,10 +9,10 @@ form.review-form {
   padding: 0.75em 0.809em;
   font-size: .9em;
   line-height: 1.5em;
-  margin: 1em 0;
 }
 
 input.title {
+  margin-top: .75em;
 }
 
 textarea.review {
