--- a/app/views/fanfics/_fanfic_card.html.erb
+++ b/app/views/fanfics/_fanfic_card.html.erb
@@ -19,6 +19,8 @@
       <li>97%<span>Rating</span></li>
       <li>298k<span>Words</span></li>
       <li>05/12/13<span>Release Date</span></li>
+      <li>G<span>MPAA</span></li>
+
     </ul>
   </div>
 </div>
