--- a/app/views/fanfics/index.html.erb
+++ b/app/views/fanfics/index.html.erb
@@ -1,7 +1,5 @@
-<%= render 'layouts/dropdown' %>
-
 <% 10.times do %>
-  <%= render 'fanfics/show' %>
+  <%= render 'fanfics/fanfic_card' %>
 <% end %>
 
 <%= render 'layouts/pagination' %>
