--- a/app/views/layouts/_search_tools.html.erb
+++ b/app/views/layouts/_search_tools.html.erb
@@ -108,7 +108,7 @@
       </div>
     </div>
     <div class="filter">
-      <label>Maturity Rating</label>
+      <label>MPAA Rating</label>
 
       <div>
         <ol>
