--- a/app/views/reviews/index.html.erb
+++ b/app/views/reviews/index.html.erb
@@ -1,7 +1,5 @@
-<%= render 'layouts/dropdown' %>
-
 <% 10.times do %>
-  <%= render 'layouts/comments' %>
+  <%= render 'comments/comment' %>
 <% end %>
 
 <%= render 'layouts/pagination' %>
