--- a/app/assets/stylesheets/partials/_home.scss
+++ b/app/assets/stylesheets/partials/_home.scss
@@ -1,9 +1,20 @@
-.home {
+main {
   @include outer-container;
+}
+
+.home {
   padding-top: 1em;
 
   .search-tools {
     @include span-columns(12);
+
+    .filter:nth-of-type(n+4) {
+      padding-top: 1em;
+    }
+
+    .trigger-button {
+      margin-top: 2.95em;
+    }
   }
 
   .dropdown {
