cleaning up some stuff

--- a/app/views/tags/index.html.erb
+++ b/app/views/tags/index.html.erb
@@ -1,5 +1,5 @@
 <div class="tags">
-  <%= render 'layouts/dropdown' %>
+  <%= render 'layouts/dropdown', description: "Order By", button: "Newly Updated", options: ["Newly Created", "Most Used", "Least Used"] %>
 
   <% 30.times do %>
     <span class="tag">Manip!Dumbledore</span>
