--- a/app/assets/stylesheets/refills/_footer.scss
+++ b/app/assets/stylesheets/refills/_footer.scss
@@ -1,8 +1,13 @@
+html {
+  height: 100%;
+}
+
 body {
   margin: 0;
   padding: 0;
   position: relative;
   padding-bottom: 100px;
+  min-height: 100%;
 }
 
 footer {
