--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -7,8 +7,7 @@
 
     <div class="nav">
       <ul id="navigation-menu">
-        <li class="nav-link"><%= link_to "Reviews", reviews_path %></li>
-        <li class="nav-link"><%= link_to "Fanfics", fanfics_path %></li>
+        <li class="nav-link"><%= link_to "About", "#" %></li>
         <li class="nav-link"><%= link_to "Tags", tags_path %></li>
         <li class="nav-link"><%= link_to "Submit", new_fanfic_path %></li>
       </ul>
