--- a/app/views/tags/new.html.erb
+++ b/app/views/tags/new.html.erb
@@ -1,2 +1,3 @@
-<h1>Tags#new</h1>
-<p>Find me in app/views/tags/new.html.erb</p>
+<%= simple_form_for @tag do |f| %>
+  <%= f.input :name %>
+<% end %>
