alert message styling and showing tags

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -19,11 +19,11 @@
 
 @import "partials/authenticate";
 @import "partials/globals";
-@import "partials/flash";
 @import "partials/home";
 @import "partials/tags";
 @import "partials/users";
 @import "partials/review";
+@import "partials/alert";
 
 
 
