--- a/app/views/layouts/_messages.html.erb
+++ b/app/views/layouts/_messages.html.erb
@@ -1,9 +1,14 @@
 <%# Rails flash messages styled for Zurb Foundation %>
 <% flash.each do |name, msg| %>
   <% if msg.is_a?(String) %>
-    <div data-alert class="alert-box round <%= name.to_s == 'notice' ? 'success' : 'alert' %>">
-      <%= content_tag :div, msg %>
-      <a href="#" class="close">&times;</a>
+
+    <div data-alert class="flash-<%= name.to_s == 'notice' ? 'success' : 'alert' %>">
+      <div class="row">
+
+        <%= content_tag :div, msg %>
+        <!--<a href="#" class="close">&times;</a>-->
+      </div>
+
     </div>
   <% end %>
 <% end %>
