mpaa col added with default 0

--- a/app/views/fanfics/_fanfic_card.html.erb
+++ b/app/views/fanfics/_fanfic_card.html.erb
@@ -13,6 +13,7 @@
     <span class="tag">#Smart!Harry</span>
     <span class="tag">#Angst</span>
     <span class="tag">#Sadness</span>
+    <span class="tag">...</span>
   </div>
   <div class="card-stats">
     <ul>
