--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -17,13 +17,14 @@
 @import "refills/search-tools";
 @import "refills/vertical-tabs";
 
-@import "partials/authenticate";
-@import "partials/globals";
-@import "partials/home";
-@import "partials/tags";
-@import "partials/users";
-@import "partials/review";
-@import "partials/alert";
+@import "authenticate";
+@import "globals";
+@import "home";
+@import "tags";
+@import "users";
+@import "forms";
+@import "review";
+@import "alert";
 
 
 
