relationship type select working

--- a/app/views/fanfics/new.html.erb
+++ b/app/views/fanfics/new.html.erb
@@ -8,6 +8,7 @@
     <%= f.input :word_count %>
     <%= f.input :published %>
     <%= f.input :updated %>
+    <%= f.association :relationship_type %>
   <% end %>
 
 </div>
