i <3 simple form, associations looking good

--- a/app/views/fanfics/new.html.erb
+++ b/app/views/fanfics/new.html.erb
@@ -10,6 +10,8 @@
     <%= f.input :updated, as: :date %>
     <%= f.association :relationship_type %>
     <%= f.association :mpaa %>
+    <%= f.association :crossovers %>
+    <%= f.association :characters %>
   <% end %>
 
 </div>
