boolean staffpick added to fanfic

--- a/app/views/fanfics/new.html.erb
+++ b/app/views/fanfics/new.html.erb
@@ -12,6 +12,7 @@
     <%= f.association :mpaa %>
     <%= f.association :crossovers %>
     <%= f.association :characters %>
+    <%= f.button :submit %>
   <% end %>
 
 </div>
