--- a/app/assets/stylesheets/base/_variables.scss
+++ b/app/assets/stylesheets/base/_variables.scss
@@ -1,3 +1,9 @@
+$form-bg: #f9f9f9;
+$label-color: #666666;
+$form-box-shadow: 0 2px 4px #e6e6e6;
+$form-border-color: #dddddd;
+$form-border-radius: 0.1875em;
+
 // Typography
 $sans-serif: $helvetica;
 $serif: $georgia;
@@ -44,10 +50,10 @@ $notice-color: $light-yellow;
 $success-color: $light-green;
 
 // Forms
-$form-border-color: $base-border-color;
+//$form-border-color: $base-border-color;
 $form-border-color-hover: darken($base-border-color, 10);
 $form-border-color-focus: $base-accent-color;
-$form-border-radius: $base-border-radius;
+//$form-border-radius: $base-border-radius;
 $form-box-shadow: inset 0 1px 3px rgba(0,0,0,0.06);
 $form-box-shadow-focus: $form-box-shadow, 0 0 5px rgba(darken($form-border-color-focus, 5), 0.7);
 $form-font-size: $base-font-size;
