--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -3,7 +3,7 @@
     <img src="https://raw.githubusercontent.com/thoughtbot/refills/master/source/images/placeholder_logo_1.png" alt="">
   </div>
   <ul>
-    <li><a href="javascript:void(0)">Reviews</a></li>
+    <li><a href="javascript:void(0)">Secret Sauce</a></li>
     <li><a href="javascript:void(0)">Fanfics</a></li>
     <li><a href="javascript:void(0)">Tags</a></li>
   </ul>
