hacking while tired = bad idea

--- a/app/assets/stylesheets/_tags.scss
+++ b/app/assets/stylesheets/_tags.scss
@@ -22,11 +22,12 @@
 }
 
 .tags .tag {
-  line-height: 1.5em;
-  font-size: 1em;
-  margin: 1em;
-  background: #f7f7f7;
-  color: #CA4747;
+//  line-height: 1.5em;
+//  font-size: 1em;
+//  margin: 1em;
+//  background: #fff;
+//
+//  color: #CA4747;
 }
 
 .tags {
