--- a/app/views/tags/index.html.erb
+++ b/app/views/tags/index.html.erb
@@ -1,7 +1,7 @@
 <div class="tags">
   <%= link_to new_tag_path do %>
     <button class="header-button">
-      Create New Tag
+      Add Tag
     </button>
   <% end %>
   <div class="row">
